site/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cherrypick
  labels:
    name: cherrypick
