site/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: site
  namespace: cherrypick
spec:
  type: ClusterIP
  selector:
    app: site
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
